--- a/web/front/index.html
+++ b/web/front/index.html
@@ -17,8 +17,9 @@
 
         <div id="all_of_texts">
             <textarea id="text1"></textarea>
-            <div id="app"></div>
-            <textarea id="text2"></textarea>
+            <div  id="app">Analyze</div>
+            <span id="text3">Правда на</span><br>
+            <span id="text2">55%</span>
         </div>
     </section>
 
